--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".View.Activity.MainActivityKotlin"
+            android:name=".View.Activity.LoginActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".View.Activity.MainActivity"/>
     </application>
 
 </manifest>
