Add Login and Register with FireBase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,14 @@
         android:theme="@style/Theme.MaProject"
         tools:targetApi="31">
 
+
+
+        <activity android:name=".View.Activity.SignupActivity"
+            android:exported="false">
+
+        </activity>
         <activity
-            android:name=".View.Activity.LoginActivity"
+            android:name=".View.Activity.ActivityLogin"
             android:exported="true">
 
             <intent-filter>
@@ -24,6 +30,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".View.Activity.MainActivityKotlin"
+            android:exported="true">
         </activity>
         <activity android:name=".View.Activity.MainActivity"/>
     </application>
